css/style.css
@import url(http://fonts.googleapis.com/css?family=Kaushan+Script);

@import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,700);

body {
/*background: url("../img/symphony.png");*/
  font-family: 'Source Sans Pro', sans-serif;
  font-size: 16px;
  font-weight: 400;
}

#page {
  max-width: 830px;
  min-width: 400px;
  margin: 1em auto;
  padding: 1em 3em;
  /*border: 3px dashed #065D7E;*/
  background-color: #fff;
}

h1 {
  margin: 10px auto;
  font-family: 'Kaushan Script', sans-serif;
  /*font-family: 'Bree Serif', serif*/
  font-size: 3.5em;
  /*color:  #065D7E;*/
  text-align: center;
  letter-spacing: 0.1em;
  /*border-bottom: 5px double #065D7E;*/
}

a{
  text-decoration: none;
  color: #000;
}
nav {
  padding-bottom: 0.5em auto;
  border-top: 3px double #1793cd;
  border-bottom: 3px double #1793cd;
  text-align: center;
  margin-bottom: 2em;
  /* float: right; */
}

address {
  float: left;
}

a:hover {
  color: #00649a;
  text-decoration: underline;
}

h1 a:hover{
  text-decoration: none;
  color: #000;
}
#email a {
  float: right;
  text-align: left;
}
/*
#email a:hover {
  text-decoration: underline;
  color: #000;
}
*/
nav li {
  display: inline;
  margin: 1em 2.5em;
}

nav a {
  font-weight: 700;
  color: #000;
  text-decoration: none;
  padding: 0.5em;
  }



main {
  line-height: 1em;
}

blockquote{
  margin: 2em auto;
  color: #808080;
}
h2 {
  font-family: 'Kaushan Script', sans-serif;
  border-bottom: 1px dashed #00649a;
  font-size: 1.75em;
  line-height: 2em;
}

#education {
  margin: 0.3em auto;
}
#education h2 {
  margin-top: 2em;
}

h3 {
  font-weight: 600;
  color: #00649a;
  font-size: 1.2em;
  margin-top: 2em;
}

#bio h2 {
  margin-top: 2em;
  border: none;
  line-height: 1em;
}

#bio h3{
  margin-top: 1em;
}

h4 {
  font-weight: 700;
  line-height: 0.5em;
  margin-bottom: 0.7em;
  margin-top: 1em;
}

h3+p,
h4+p {
  font-style: italic;
}

#bio h3
{
  text-align: right;
  margin-top: 1em;
}

h3~p
{
  margin-top: 0.5em;
  margin-bottom: 0.5em;
}

#ContactMe h4{
  margin-top: 2em;
}
#ContactMe ul{
  list-style: none;
}
#ContactMe li{
  line-height: 1.7em;
}

#skills li {
  line-height: 1.7em;
}

#skills li li {
  line-height: 1.3em;
}
/*
#blurb {
  float: left;
}
*/
figure{
  float: right;
  width: 200px;
  height: 300px;
  padding: 5px;
  margin: 5px 10px 5px 20px;
  border: 1px solid #eee;
}

footer {
  margin: 5em auto;
  border-top: 3px double #1793cd;
  padding: 2em auto;
}
footer a {
  font-weight: bold;
  text-decoration: none;
}

